--- a/login.html
+++ b/login.html
@@ -8,8 +8,13 @@
 <body>
     <div>
         <div>
-            <div></div>
-            <div></div>
+            <div>
+                <h1>Login Page</h1>
+            </div>
+            <div>
+                <input type="text" placeholder="Enter you Username">
+                <input type="text" placeholder="Enter you Password">
+            </div>
         </div>
     </div>
 </body>
